# AI_TEST_CODE

./: .gitignore  AGENTS.md  PRESENTATION.md  README.md  harness.toml  plan.md  pyproject.toml
app/: main.py  presentation.html
docs/: AI_PROMPTS.md  OPTIONAL_MUTATION.md  REPOSITORY_HARNESS.md  TDD_CYCLES.md  VIDEO_ALIGNMENT.md
scripts/: tdd_harness.py
tests/: test_contract_budget.py  test_contract_payment_terms.py  test_contract_submission_material.py  test_documentation.py  test_harness.py  test_presentation.py  test_reservations.py
